--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,26 @@
       <artifactId>poi</artifactId>
       <version>5.3.0</version>
     </dependency>
+    <!-- Para arquivos .xlsx (Excel 2007+) -->
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
-      <version>5.3.0</version>
+      <version>5.2.3</version> <!-- Ou a versão mais recente -->
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>6.1.11</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.12.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.mysql </groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.0.33</version>
     </dependency>
   </dependencies>
 
