--- a/pom.xml
+++ b/pom.xml
@@ -24,18 +24,21 @@
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
-      <version>5.2.3</version> <!-- Ou a versão mais recente -->
+      <version>5.2.3</version>
     </dependency>
+    <!-- Traz a dependencia do spring-jdbc -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
       <version>6.1.11</version>
     </dependency>
+    <!-- mesma fita, traz a dependencia do spring -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-dbcp2</artifactId>
       <version>2.12.0</version>
     </dependency>
+    <!-- traz a dependencia do mySQL -->
     <dependency>
       <groupId>com.mysql </groupId>
       <artifactId>mysql-connector-j</artifactId>
