--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
       <artifactId>s3</artifactId>
       <version>2.27.21</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20250517</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
